--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : https://calmered.github.io # the base hostname & protocol for your site e.g. https://www.someone.com
-permanent_url: https://young-lord.github.io # 目前用于在多域名间共享评论区
+# permanent_url: https://young-lord.github.io # 目前用于在多域名间共享评论区
 baseurl : "" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/public`前也要加，即`/your_baseurl/public`。这一项结尾不要有'/'
 title   : LY 的博客
 title_description: ""
@@ -45,7 +45,7 @@ timezone: Asia/Shanghai # see https://en.wikipedia.org/wiki/List_of_tz_database_
 author:
   type      : person # "person" (default), "organization"
   name      : LY
-  url       : &github_profile_url https://github.com/Young-Lord
+  # url       : &github_profile_url https://github.com/Young-Lord
 #  avatar    : https://avatars.githubusercontent.com/Young-Lord # path or url of avatar image (square)
   bio       : ""
   email     : ly-niko@qq.com
