--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ cdn:
 
 # the avatar on sidebar, support local or CORS resources
 avatar:
-    enable: false
+    # enable: false
     # img: /public/image/iconSize600.png # 头像的地址
     # info: <br/>Niko Forever # 头像背后的信息
 
